--- a/angular-training/src/app/app.component.html
+++ b/angular-training/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h3>Hello Hello</h3>
-<hr>
-<app-server></app-server>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h3>Hello Hello</h3>
+            <hr>
+            <!-- <div class='app-servers'></div> -->
+            <app-servers></app-servers>
+            <!-- <div class='app-servers'></div> -->
+        </div>
+    </div>
+</div>
