--- a/recepies/src/app/app.component.html
+++ b/recepies/src/app/app.component.html
@@ -1,7 +1,10 @@
+<h2>
+  <app-header></app-header>
+</h2>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>Bonjour, Boostrap est configuré</h2>
+      <app-recipies></app-recipies>
+      <app-shopping-list></app-shopping-list>
     </div>
-    <app-header></app-header>
   </div>
