--- a/recepies/src/app/header/header.component.html
+++ b/recepies/src/app/header/header.component.html
@@ -1,13 +1,28 @@
-<div class="container">
-  <div class="row justify-content-center">
-    header works!
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <app-shopping-list></app-shopping-list>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Recipe Book</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Recipes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Shopping List</a>
+      </li>
+    </ul>
+    <div class="dropdown show">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        Manage
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="#">Save Data</a>
+        <a class="dropdown-item" href="#">Fetch Data</a>
+      </div>
     </div>
-    <div class="col-md-6">
-      <app-recipe-book></app-recipe-book>
-    </div>
   </div>
-</div>
+</nav>
