--- a/recepies/src/app/recipies/recipe-list/recipe-list.component.html
+++ b/recepies/src/app/recipies/recipe-list/recipe-list.component.html
@@ -1,5 +1,23 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-12">
+    <button class="btn btn-success">New Recipe</button>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-12">
+    <a href="#" class="list-group-item" *ngFor="let recipe of recipes">
+      <div class="row align-items-center">
+        <div class="col-8">
+          <h4 class="lest-group-item-heading">{{recipe.name}}</h4>
+          <p class="list-group-item-text">{{recipe.description}}
+          </p>
+        </div>
+        <span class="col-4">
+          <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive float-right" style="max-height: 50px">
+        </span>
+      </div>
+    </a>
     <app-recipe-item></app-recipe-item>
   </div>
 </div>
