--- a/recepies/src/app/shopping-list/shopping-list.component.html
+++ b/recepies/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,9 @@
   <div class="col-10">
     <app-shopping-list-edit></app-shopping-list-edit>
     <hr>
-    <p>The List</p>
+    <ul class="list-group">
+      <a class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients">{{ingredient.amount}}
+        {{ingredient.name}}</a>
+    </ul>
   </div>
 </div>
